# tangle-cli

./: .gitmodules  README.md  pyproject.toml  uv.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yaml
scripts/: refresh_pipeline_schema.py
skills/tangent/: OSS-CONVENTIONS.md  PORT-README.md  SKILL.md
skills/tangent/agents/: auth-wizard.md  builder.md  debugger.md  reporter.md  researcher.md  reviewer.md  scenario-builder.md
skills/tangent/references/: data-sources.md  event-log.md  iterating-on-runs.md  knowledge-corpus.md  secrets.md  setup.md  step-0-initialize.md  step-1-analyze.md  step-2-hypothesize.md  step-3-submit.md  step-4-monitor.md  step-5-evaluate.md  step-6-synthesize.md  step-7-decide.md  tangle-tools.md  uploading-artifacts.md
skills/tangent/references/example-scenarios/: 01-mslr-ranking.md  02-text-classification.md  INDEX.md
tangle_cli/: __init__.py  api_cli.py  api_client.py  api_transport.py  cli.py  client.py  component_inspector.py  components_cli.py  dynamic_discovery_client.py  generated_model_extensions.py  logger.py  models.py  published_components_cli.py  utils.py
tangle_cli/api/: __init__.py  cli_generator.py
tangle_cli/api/_tangle_api_client_lib/: __init__.py
tangle_cli/api/_tangle_api_client_lib/api/admin/: admin_set_execution_node_status_api_admin_execution_node_id_status_put.py  (+1 more)
tangle_cli/api/_tangle_api_client_lib/models/: __init__.py  artifact_data.py  artifact_data_extra_data_type_0.py  artifact_data_response.py  artifact_node_id_response.py  artifact_node_response.py  artifact_node_response_type_properties_type_0.py  body_create_api_pipeline_runs_post.py  body_create_api_pipeline_runs_post_annotations_type_0.py  body_create_secret_api_secrets_post.py  body_set_settings_api_users_me_settings_patch.py  body_set_settings_api_users_me_settings_patch_settings.py  body_update_secret_api_secrets_secret_name_put.py  caching_strategy_spec.py  component_library.py  component_library_annotations_type_0.py  component_library_folder.py  component_library_folder_annotations_type_0.py  component_library_response.py  component_library_response_annotations_type_0.py  component_reference.py  component_response.py  component_spec.py  concat_placeholder.py  container_execution_status.py  container_implementation.py  container_spec.py  container_spec_env_type_0.py  dynamic_data_argument.py  dynamic_data_argument_dynamic_data_type_1.py  execution_node_reference.py  execution_options_spec.py  execution_status_summary.py  get_artifact_info_response.py  get_artifact_signed_url_response.py  get_container_execution_log_response.py  get_container_execution_state_response.py  get_container_execution_state_response_debug_info_type_0.py  get_execution_artifacts_response.py  get_execution_artifacts_response_input_artifacts_type_0.py  (+50 more)
tangle_cli/openapi/: codegen.py  parser.py
tests/: conftest.py  test_api_cli.py  test_api_client.py  test_api_transport.py  test_args_container.py  test_artifacts.py  test_artifacts_cli.py  test_client.py  test_codegen.py  test_component_from_func.py  test_component_generator.py  test_component_inspector.py  test_component_publisher.py  test_components_cli.py  test_dynamic_discovery_client.py  test_logger.py  test_models.py  test_module_bundler.py  test_packaging.py  test_pipeline_compiler.py  test_pipeline_dehydrator.py  test_pipeline_runs_cli.py  test_pipelines_cli.py  test_python_pipeline_dsl.py  test_python_pipeline_dynamic_data.py  test_resource_managers.py  test_schema_validation.py  test_sdk_http_errors.py  test_secrets_cli.py  test_static_client.py  test_submit_and_wait_prepared_body.py  test_tangle_cli_cli.py  test_tangle_deploy_compat_imports.py  test_tls_verification.py  test_transport_errors.py  test_utils.py  test_version_manager.py
tests/fixtures/python_pipeline/: dup_task_pipeline.py  dynamic_secret_pipeline.py  empty_pipeline.py  multi_arg_pipeline.py  multi_pipeline.py  no_pipeline.py  noop.yaml  pipeline.py  subpipeline_child_config.yaml  subpipeline_config_pipeline.py  subpipeline_pipeline.py  task_env_strip_annotation_op.py  task_env_strip_body_ref_op.py  task_env_strip_colocated_op.py  task_env_strip_envs.py  task_env_strip_imported_op.py  task_env_strip_inline_op.py  task_env_strip_mixed_import_op.py  task_env_strip_module_op.py  task_env_strip_nested_import_op.py  task_env_strip_override_op.py  task_pipeline.py
tests/fixtures/python_pipeline/broadcast_zone/: broadcast_grandchild_config.yaml  broadcast_pipeline.py  broadcast_root_config.yaml
tests/fixtures/python_pipeline/registered_zone/: gen_config.yaml  registered_op_pipeline.py  registered_op_relative_pipeline.py  zone_root.marker
tests/snapshots/component_generator/: bundle_mode.expected.yaml  complete_generation.expected.yaml  helper_functions.expected.yaml
(+36 files in other folders)
